--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "express---practice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lazarks/node-express--practice.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lazarks/node-express--practice/issues"
-  },
-  "homepage": "https://github.com/lazarks/node-express--practice#readme",
-  "dependencies": {
-    "express": "^4.17.3"
-  }
+    "name": "express---practice",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lazarks/node-express--practice.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/lazarks/node-express--practice/issues"
+    },
+    "homepage": "https://github.com/lazarks/node-express--practice#readme",
+    "dependencies": {
+        "express": "^4.17.3",
+        "nodemon": "^2.0.15"
+    }
 }
