--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon ./middleware-example/app.js"
+        "start": "nodemon ./http-methods/post-ex.js"
     },
     "repository": {
         "type": "git",
